--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".view.MainActivity">
 
+    <!-- Первый таймер -->
     <TextView
         android:id="@+id/text_time"
         android:layout_width="wrap_content"
@@ -44,4 +45,44 @@
         android:text="@string/button_stop_text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/button_start" />
+
+    <!-- Второй таймер -->
+    <TextView
+        android:id="@+id/text_time_second"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/text_time_margin_top"
+        android:text="@string/text_time_text"
+        android:textColor="@color/black"
+        android:textSize="@dimen/text_time_text_size"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button_stop" />
+
+    <Button
+        android:id="@+id/button_start_second"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/button_start_margin"
+        android:text="@string/button_start_text"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/text_time_second" />
+
+    <Button
+        android:id="@+id/button_pause_second"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/button_pause_text"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/button_start_second" />
+
+    <Button
+        android:id="@+id/button_stop_second"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="@dimen/button_stop_margin_end"
+        android:text="@string/button_stop_text"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/button_start_second" />
 </androidx.constraintlayout.widget.ConstraintLayout>
